--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,9 @@
   background-color: white;
   border-bottom: 1px solid lightgray;
 }
+
+.app__signUp {
+  display: flex;
+ 
+  flex-direction: column;
+}
