--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 * {
   margin: 0;
-  
 }
 .app {
   background-color: #fafafa;
-
 }
 
 .app__header {
@@ -12,10 +10,23 @@
   padding: 20px;
   background-color: white;
   border-bottom: 1px solid lightgray;
+  display: flex;
+  justify-content: space-between;
+}
+.app__headerImage {
+  object-fit: contain;
 }
 
 .app__signUp {
   display: flex;
- 
+
   flex-direction: column;
+}
+.app__posts {
+  padding: 1.2rem;
+  display: flex;
+  justify-content: center;
+}
+.app__postsRight {
+  margin-left: 20px;
 }
