--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 }
 
 .app__header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
   object-fit: contain;
   padding: 20px;
   background-color: white;
